Adding copy right and payment protection icons

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -680,8 +680,8 @@
       "type": "text",
       "id": "copyright_text",
       "label": "Copyright Text",
-      "default": "",
-      "info": "Copyright text displayed on the left side. Leave empty to use default: '© [Year] [Store Name]. All rights reserved.' You can use {{ shop.name }} for store name."
+      "default": "© 2024 {{ shop.name }}. All rights reserved.",
+      "info": "Copyright text displayed on the left side. Use {{ shop.name }} for store name. Year will be auto-updated."
     },
     {
       "type": "range",
