--- a/snippets/footer-content.liquid
+++ b/snippets/footer-content.liquid
@@ -318,10 +318,41 @@
         </div>
         <div class="col-12 col-md-6 footer-payment-icons" style="text-align: right; margin-bottom: 15px;">
           {% if show_payment_icons %}
+            {%- liquid
+              assign payment_types_found = 0
+              assign visa_found = false
+              assign mastercard_found = false
+              assign amex_found = false
+              
+              for type in shop.enabled_payment_types
+                assign type_string = type | downcase
+                if type_string == 'visa' or type_string contains 'visa'
+                  assign visa_found = true
+                  assign payment_types_found = payment_types_found | plus: 1
+                elsif type_string == 'master' or type_string == 'mastercard' or type_string contains 'master'
+                  assign mastercard_found = true
+                  assign payment_types_found = payment_types_found | plus: 1
+                elsif type_string == 'american_express' or type_string == 'amex' or type_string contains 'american' or type_string contains 'amex'
+                  assign amex_found = true
+                  assign payment_types_found = payment_types_found | plus: 1
+                endif
+              endfor
+            -%}
             <div class="payment-icons-wrapper" style="display: flex; justify-content: flex-end; align-items: center; flex-wrap: wrap; gap: {{ payment_icon_gap }}px;">
               {%- for type in shop.enabled_payment_types -%}
-                {%- assign type_string = type | downcase -%}
-                {%- if type_string == 'visa' or type_string == 'master' or type_string == 'american_express' -%}
+                {%- liquid
+                  assign type_string = type | downcase
+                  assign should_show = false
+                  
+                  if type_string == 'visa' or type_string contains 'visa'
+                    assign should_show = true
+                  elsif type_string == 'master' or type_string == 'mastercard' or type_string contains 'master'
+                    assign should_show = true
+                  elsif type_string == 'american_express' or type_string == 'amex' or type_string contains 'american' or type_string contains 'amex'
+                    assign should_show = true
+                  endif
+                -%}
+                {%- if should_show -%}
                   <span class="payment-icon-wrapper" style="display: inline-block;">
                     {{ type | payment_type_svg_tag: class: 'payment-icon' }}
                   </span>
