--- a/snippets/footer-content.liquid
+++ b/snippets/footer-content.liquid
@@ -321,29 +321,17 @@
             <div class="payment-icons-wrapper" style="display: flex; justify-content: flex-end; align-items: center; flex-wrap: wrap; gap: {{ payment_icon_gap }}px;">
               <!-- Visa Icon -->
               <span class="payment-icon-wrapper" style="display: inline-block;">
-                <svg class="payment-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84 48" style="height: {{ payment_icon_size }}px; width: auto;">
-                  <rect width="84" height="48" rx="4" fill="#1434CB"/>
-                  <path d="M35.5 18.5h-5l-3.2 11.2h5l3.2-11.2zm12.5 7.2c0-2.8-5.9-3-5.9-4.3 0-.4.6-.8 1.8-.8 1.5 0 4.1.3 5.7.6l1-4c-1.4-.2-3.3-.5-5.6-.5-5.9 0-9.8 2-9.8 4.9 0 2.1 2.9 3.3 5 4 2.3.7 3 1.2 3 1.9 0 1-1.8 1.5-3.5 1.5-3 0-4.7-.5-6-1l-1 4.1c1.4.4 3.8.7 7.1.7 6.3 0 10.4-2 10.5-5.1zm15.3-7.2l-4 11.2h5l4-11.2h-5z" fill="#fff"/>
-                  <path d="M20.3 18.5c-1.5-.4-3.8-.7-6.6-.7-6.6 0-11.3 2.4-11.3 5.8 0 2.5 3.3 3.9 5.9 4.7 2.6.9 3.5 1.5 3.5 2.3 0 1.2-2.1 1.8-4.1 1.8-3.5 0-5.4-.6-6.9-1.1l-1.2 3.8c1.5.5 4.2.9 8.1.9 7.1 0 11.6-2.4 11.6-6.2 0-2-1.8-3.5-5.3-4.7-2.3-.8-3.6-1.3-3.6-2.1 0-.7.9-1.4 2.9-1.4 1.7 0 2.9.3 3.8.6l1.2-3.7z" fill="#fff"/>
-                </svg>
+                <img src="https://cdn.shopify.com/s/files/1/0778/3818/8777/files/HYPE_Payment_Icon_8349ee45-9427-468a-8c84-03a3c6716b9b.jpg?v=1765181685" alt="Visa" class="payment-icon" style="height: {{ payment_icon_size }}px; width: auto; display: block;">
               </span>
               
               <!-- Mastercard Icon -->
               <span class="payment-icon-wrapper" style="display: inline-block;">
-                <svg class="payment-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84 48" style="height: {{ payment_icon_size }}px; width: auto;">
-                  <rect width="84" height="48" rx="4" fill="#000"/>
-                  <circle cx="31" cy="24" r="12" fill="#EB001B"/>
-                  <circle cx="53" cy="24" r="12" fill="#F79E1B"/>
-                  <path d="M42 12c4 2.4 6.4 6.2 6.4 10.2s-2.4 7.8-6.4 10.2c-4-2.4-6.4-6.2-6.4-10.2s2.4-7.8 6.4-10.2z" fill="#FF5F00"/>
-                </svg>
+                <img src="https://cdn.shopify.com/s/files/1/0778/3818/8777/files/HYPE_Payment_Icon_2.jpg?v=1765181684" alt="Mastercard" class="payment-icon" style="height: {{ payment_icon_size }}px; width: auto; display: block;">
               </span>
               
               <!-- American Express Icon -->
               <span class="payment-icon-wrapper" style="display: inline-block;">
-                <svg class="payment-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84 48" style="height: {{ payment_icon_size }}px; width: auto;">
-                  <rect width="84" height="48" rx="4" fill="#006FCF"/>
-                  <path d="M15.5 18.5h4.5l2.2 7.5 2.3-7.5h4.2l2.3 7.5 2.2-7.5h4.5l-4.1 11.5h-4.5l-2.2-6.2-2.2 6.2h-4.5l-4.1-11.5zm21.5 0h9.7v2.3h-5.5v3.1h5.2v2.3h-5.2v3.2h5.5v2.3H37v-12.2zm18.7 0h4.5l4.1 9.7 4.1-9.7h4.5v11.5h-3.2v-10.1l-3.8 10.1h-2.6l-3.8-10.1v10.1h-3.2v-11.5z" fill="#fff"/>
-                </svg>
+                <img src="https://cdn.shopify.com/s/files/1/0778/3818/8777/files/HYPE_Payment_Icon_3.jpg?v=1765181685" alt="American Express" class="payment-icon" style="height: {{ payment_icon_size }}px; width: auto; display: block;">
               </span>
             </div>
           {% endif %}
