Adding copy right and payment protection icons

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -59,6 +59,22 @@
           "id": "social_url",
           "label": "Profile URL",
           "info": "Link to your profile on this platform"
+        },
+        {
+          "type": "header",
+          "content": "Custom Icon (Optional)"
+        },
+        {
+          "type": "image_picker",
+          "id": "custom_icon_image",
+          "label": "Custom Icon Image",
+          "info": "Upload a custom icon image. If uploaded, this will be used instead of the default SVG icon."
+        },
+        {
+          "type": "text",
+          "id": "custom_icon_url",
+          "label": "Custom Icon Image URL",
+          "info": "Alternative: Enter a direct URL to an icon image. Used if custom icon image is not uploaded."
         }
       ]
     },
