--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -468,6 +468,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   {% section 'footer' %}
 
+  <!-- Shopify Common JS (must load before other scripts) -->
+  <script src="{{ 'shopify_common.js' | asset_url }}"></script>
   <!-- Bootstrap 5 JS -->
   {% comment %} theme-check-disable RemoteAsset {% endcomment %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
